--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 h1 {
-  color: #FFF;
+  color: #ff84de;
   text-transform: uppercase;
-  font-family: Georgia, Garamond, serif;
+  font-family: Andale Mono, Garamond, serif;
   font-size: 32px;
   padding-top: 100px;
   text-align: left;
