--- a/style.css
+++ b/style.css
@@ -3,21 +3,21 @@
   /* Old browsers */
   background: #e5e5e5
   /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(-45deg, #35577D, #141E30);
+  background: -webkit-linear-gradient(-45deg, #e5e5e5, #FFF);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(-45deg, #35577D, #141E30);
+  background: linear-gradient(-45deg, #e5e5e5, #FFF);
   margin: 0;
   padding: 0;
 }
 
 h1 {
-  color: #ff84de;
+  color: #a54395;
   text-transform: uppercase;
   font-family: Tahoma, Garamond, serif;
   font-size: 32px;
   padding-top: 100px;
-  border: #5ae2b3 2px solid;
-  text-align: left;
+  border: #45ada9 2px solid;
+  text-align: center;
   width: 60%;
 }
 
