--- a/style.css
+++ b/style.css
@@ -62,10 +62,12 @@ p {
 a {
   color: #f97f93;
   font-size: 20px;
-  font-family: Webdings;
+  font-family: Verdana;
   text-align: center;
-  border-color: #f9997f #c67ff9;
-  
+  border-bottom: 6px #f9997f;
+  border-left: 6px #c67ff9;
+  border-top: 6px #b1f97f;
+  border-right: 6px #f9e67f;
 
 
 }
