--- a/style.css
+++ b/style.css
@@ -62,12 +62,10 @@ p {
 a {
   color: #f97f93;
   font-size: 20px;
-  font-family: Verdana;
+  font-family: 'Raleway';
   text-align: center;
   border-bottom: 6px #f9997f;
   border-left: 6px #c67ff9;
   border-top: 6px #b1f97f;
   border-right: 6px #f9e67f;
-
-
 }
