--- a/style.css
+++ b/style.css
@@ -59,13 +59,15 @@ p {
   border: #f9997f 4px solid;
   width: 100%;
 }
+
 a {
   color: #f97f93;
   font-size: 20px;
-  font-family: 'Raleway';
+  font-family: 'Raleway', Arial;
   text-align: center;
   border-bottom: 6px #f9997f;
   border-left: 6px #c67ff9;
   border-top: 6px #b1f97f;
   border-right: 6px #f9e67f;
 }
+
