--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h1 {
   text-transform: uppercase;
   font-family: Tahoma, Garamond, serif;
   font-size: 100px;
-  padding-top: 10px;
+  padding: 2px;
   border: #45ada9 6px solid;
   text-align: center;
   width: 60%;
@@ -30,7 +30,7 @@ h2 {
   font-weight: 100;
   font-size: 30px;
   line-height: 24px;
-  padding-bottom: 15px;
+  padding: 2px;
   text-align: center;
   width: 70%;
 }
@@ -44,7 +44,7 @@ h3 {
   font-weight: 100;
   font-size: 30px;
   line-height: 24px;
-  padding-bottom: 15px;
+  padding: 3px;
   text-align: center;
   width: 70%;
 }
