--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 
   body {
   /* Old browsers */
-  background: #e5e5e5
+  background: #e3f9e5
   /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(-45deg, #e5e5e5, #FFF);
+  background: -webkit-linear-gradient(-45deg, #e3f9e5, #f9e3e3);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(-45deg, #e5e5e5, #FFF);
+  background: linear-gradient(-45deg, #e3f9e5, #f9e3e3);
   margin: 0;
   padding: 0;
 }
@@ -35,7 +35,7 @@ h2 {
   padding: 2px;
   text-align: center;
   width: 70%;
-  margin: 3px;
+  margin: 6px;
 }
 
 h3 {
@@ -50,7 +50,7 @@ h3 {
   padding: 3px;
   text-align: center;
   width: 70%;
-  margin: 3px;
+  margin: 6px;
 }
 
 p {
@@ -62,7 +62,7 @@ p {
   text-align: center;
   border: #f9997f 4px solid;
   width: 70%;
-  margin: 3px;
+  margin: 6px;
 }
 
 a {
@@ -74,5 +74,6 @@ a {
   border-left: 6px #c67ff9;
   border-top: 6px #b1f97f;
   border-right: 6px #f9e67f;
+  margin: 6px;
 }
 
