--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
   /* Old browsers */
   background: #e3f9e5
   /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(-45deg, #e3f9e5, #f9e3e3);
+  background: -webkit-linear-gradient(#e3f9e5, #f9e3e3);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(-45deg, #e3f9e5, #f9e3e3);
+  background: linear-gradient (#e3f9e5, #f9e3e3);
   margin: 0;
   padding: 0;
 }
