--- a/style.css
+++ b/style.css
@@ -1,11 +1,6 @@
 
   body {
-  /* Old browsers */
-  background: #e3f9e5
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-linear-gradient(#e3f9e5, #f9e3e3);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient (#e3f9e5, #f9e3e3);
+  Background-image: linear-gradient(#f9e3e3 33%, #edf9e3 33%, #eee3f9 34%);
   margin: 0;
   padding: 0;
 }
