--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-div { background-image: linear-gradient( yellow 33%, light yellow 33%, dark yellow 34%); 
+html { background-image: linear-gradient( yellow 33%, light yellow 33%, dark yellow 34%); 
 }
 body {
   
