--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-  background-image: linear-gradient(light yellow, dark yellow); 
+  background-image: linear-gradient(yellow, orange); 
   margin: 0;
   padding: 0;
 }
