--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-  Background: -webkit-linear-gradient(45deg, #f7f7f7 0%, #EAE0D5 100%);
+  Background: yellow;
   margin: 0;
   padding: 0;
 }
