--- a/style.css
+++ b/style.css
@@ -1,19 +1,18 @@
 
 body {
   Background-image: linear-gradient(to bottom right, yellow, purple); 
-  width: 100%;
+  width: 100px;
 }
 
 h1 {
   color: #a54395;
   text-transform: uppercase;
   font-family: Tahoma, Garamond, serif;
-  font-size: 100px;
+  font-size: 80px;
   font-weight: bold;
   padding: 10px;
   border: #45ada9 6px solid;
   text-align: center;
-  width: 100%; 
   text-shadow: 0 2px 5px #a54395;
     
 }
@@ -29,7 +28,6 @@ h2 {
   line-height: 24px;
   padding: 5px;
   text-align: center;
-  width: 70%;
   margin: 6px;
 }
 
@@ -44,7 +42,6 @@ h3 {
   line-height: 24px;
   padding: 5px;
   text-align: center;
-  width: 70%;
   margin: 6px;
 }
 
@@ -56,7 +53,6 @@ p {
   line-height: 1.7em;
   text-align: center;
   border: #f9997f 4px solid;
-  width: 70%;
   margin: 6px;
 }
 
