--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-  background-image: linear-gradient(to bottom right, yellow, purple); width: 100px;
+  background-image: linear-gradient(to bottom right, yellow, purple);
   background-size: contain;
 }
 
