--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-  background-image: linear-gradient(to bottom right, yellow, purple); width: auto;
+  background-color: yellow; width: auto;
 }
 
 h1 {
