--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 
 h1 {
   color: #a54395;
+  display: inline;
   text-transform: uppercase;
   font-family: Tahoma, Garamond, serif;
   font-size: 80px;
@@ -13,6 +14,7 @@ h1 {
   border: #45ada9 8px solid;
   text-align: center;
   text-shadow: 0 2px 5px #a54395;
+  
     
 }
 
