--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 body {
-  background-color: yellow;
-  background-size: auto auto;
-  background-position: center;
+  background-image: linear-gradient(45deg, red, blue);
 }
 h1 {
   color: #a54395;
