--- a/style.css
+++ b/style.css
@@ -12,13 +12,15 @@ h1 {
   border: #45ada9 8px solid;
   text-align: center;
   text-shadow: 0 2px 5px #a54395;
-  margin: 5px;
+  margin: 5px 5px 10px;
   
     
 }
 img {
   margin: 5px;
   padding:5px;
+  display: center;
+  
 }
 
 h2 {
