--- a/First Project/Webpage Elements/style.css
+++ b/First Project/Webpage Elements/style.css
@@ -7,6 +7,7 @@ padding: 0;
 
 #Logo {
   position: fixed;
+  background-image: url("https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Webpage%20Elements/Images/logo-tv-logo.png");
   top: 5%;
   left: 5%;
   width: 100px;
@@ -14,7 +15,7 @@ padding: 0;
 
 }
 .header {
-  background-image: src="Think-Launch-Project/First Project/Webpage Elements/Images/pexels-photo.jpg";
+  background-image: url("https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Webpage%20Elements/Images/lights-party-dancing-music.jpg");
   background-position: center;
   background-size: cover;
   font-family: Calibri;
