--- a/First Project/Webpage Elements/style.css
+++ b/First Project/Webpage Elements/style.css
@@ -47,3 +47,9 @@ padding: 0;
   padding: 40px;
   width: 25%
 }
+
+.special-shows {
+  text-align: center;
+  font-family: Calibri;
+  font-size: 15px;
+}
