--- a/First Project/Webpage Elements/style.css
+++ b/First Project/Webpage Elements/style.css
@@ -20,6 +20,7 @@ padding: 0;
   background-size: cover;
   height: 500px;
   width: 80%;
+  left: 20%;
 }
 
 
@@ -34,6 +35,7 @@ padding: 0;
   font-family: Calibri;
   font-size: 15px;
   width: 100%;
+  display: inline-block;
 }
 #prop1 {
   width: 25%
