--- a/First Project/Webpage Elements/style.css
+++ b/First Project/Webpage Elements/style.css
@@ -38,16 +38,18 @@ padding: 0;
   display: inline-block;
 }
 #prop1 {
-  width: 25%
+  width: 25%;
+  background-image: url("https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Webpage%20Elements/Images/discover.jpg");
 }
 
 #prop2 {
-  width: 25%
+  width: 25%;
+  background-image: url("https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Webpage%20Elements/Images/connect.jpeg");
 }
 
 #prop3 {
-  padding: 40px;
-  width: 25%
+  width: 25%;
+  background-image: url("https://raw.githubusercontent.com/dkavanaugh435/Think-Launch-Project/master/First%20Project/Webpage%20Elements/Images/pexels-photo-167579.jpeg");
 }
 
 .special-shows {
