--- a/First Project/Webpage Elements/style.css
+++ b/First Project/Webpage Elements/style.css
@@ -62,3 +62,10 @@ padding: 0;
   font-size: 15px;
   padding: 10px;
 }
+
+.main-menu {
+  top:25%;
+  right: 25%;
+  font-family: Calibiri;
+  font size: 10px;
+}
